font/button/and spacing fixes

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ header
 
 /* Logo & Navigation */
 
+/*
 nav 
 {
     display: flex;
@@ -74,10 +75,14 @@ nav ul
 {
     display: flex;
     text-decoration: none;
+    font-family: funkydori, sans-serif;
+    font-weight: 400;
+    font-style: normal;
     list-style-type: none;
     padding: 0 8px;
     margin: 1px auto;
 }
+*/
 
 .navButtons {
     position: fixed;
@@ -91,19 +96,22 @@ nav ul
     float: left;
     transform: translate(-50%, -50%);
     margin: 0 auto;
+    font-family: funkydori, sans-serif;
+    font-weight: 400;
+    font-style: normal;
 }
 
 
 .logo {
     text-align: center;
     font-size: 2.5rem;
+    font-family: funkydori,sans-serif;
+    font-weight: 700;
+    font-style: normal;
     margin: 0px auto;
     padding: 10px 0;
     text-decoration: none;
     color: white;
-    font-family: funkydori,sans-serif;
-    font-weight: 700;
-    font-style: normal;
 }
   
 .logo a{
@@ -397,7 +405,7 @@ nav ul
     color: black;
     width: 6em;
     height: 6em;
-    margin-left: 2em;
+    margin-left: 1em;
 }
 
 .white-button {
@@ -407,7 +415,7 @@ nav ul
     color: black;
     width: 6em;
     height: 6em;
-    margin-left: 2em;
+    margin-left: 1em;
 }
 
 .red-button {
@@ -417,7 +425,7 @@ nav ul
     color: black;
     width: 6em;
     height: 6em;
-    margin-left: 2em;
+    margin-left: 1em;
 }
 
 .pink-button {
@@ -427,7 +435,7 @@ nav ul
     color: black;
     width: 6em;
     height: 6em;
-    margin-left: 2em;
+    margin-left: 1em;
 }
 
 .orange-button {
@@ -437,5 +445,5 @@ nav ul
     color: black;
     width: 6em;
     height: 6em;
-    margin-left: 2em;
+    margin-left: 1em;
 }
